@@ -75,6 +75,9 @@ class DoInstall extends SeleniumJoomlaTestCase
     $this->waitForPageToLoad("30000");
     $this->click("server");
     $this->select("jform_error_reporting", "label=Maximum");
+    echo "Turn caching off\n";
+    $this->click("system");
+    $this->select("jform_caching", "label=OFF - Caching disabled");
     $this->click("//li[@id='toolbar-save']/a/span");
     $this->waitForPageToLoad("30000");
 	$this->doAdminLogout();
